--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -112,21 +112,12 @@
                     android:minHeight="48dp"
                     tools:ignore="HardcodedText">
 
-                    <com.prokarma.myhome.views.CircularImageView
-                        android:id="@+id/docImage"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_marginTop="8dp"
-                        android:scaleType="fitCenter" />
-
                     <TextView
                         android:id="@+id/date"
                         style="@style/tradeGothicLTStd_Dynamic22"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
                         android:layout_marginLeft="6dp"
                         android:layout_marginRight="8dp"
                         android:layout_toLeftOf="@+id/time"
@@ -151,6 +142,7 @@
                         style="@style/tradeGothicLTStd_Dynamic18"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
                         android:layout_below="@id/date"
                         android:layout_marginLeft="6dp"
                         android:layout_marginRight="8dp"
@@ -166,6 +158,7 @@
                         style="@style/tradeGothicLTStd_Dynamic16"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
                         android:layout_below="@id/facility"
                         android:layout_marginLeft="6dp"
                         android:layout_marginRight="8dp"
