Add API Ssettings in the Developer Settings. Cleaned up NetworkManager of unused code.

--- a/MyHome/app/src/main/res/layout/developer.xml
+++ b/MyHome/app/src/main/res/layout/developer.xml
@@ -142,5 +142,15 @@
             android:layout_margin="6dp"
             android:text="type here" />
 
+        <Button
+            android:id="@+id/api_overview"
+            style="@style/enableButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/type"
+            android:layout_margin="6dp"
+            android:padding="12dp"
+            android:text="API Overview" />
+
     </RelativeLayout>
 </ScrollView>
