Add Change Password and Change Security Question into API Settings.

--- a/MyHome/app/src/main/res/layout/api.xml
+++ b/MyHome/app/src/main/res/layout/api.xml
@@ -221,6 +221,48 @@
             android:layout_height="wrap_content"
             android:layout_margin="6dp" />
 
+        <TextView
+            style="@style/tradeGothicLTStd_Dynamic18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:text="Change Password API"
+            android:textStyle="bold" />
+
+        <TextView
+            style="@style/tradeGothicLTStdLight_14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:text="The Change Password API is used to change the user's password."/>
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/change_password_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp" />
+
+        <TextView
+            style="@style/tradeGothicLTStd_Dynamic18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:text="Change Security Question API"
+            android:textStyle="bold" />
+
+        <TextView
+            style="@style/tradeGothicLTStdLight_14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:text="The Change Security Question API is used to change the user's security question."/>
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/change_security_question_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp" />
+
         <Button
             android:id="@+id/save"
             style="@style/enableButtonStyle"
